fix(material/icon): mat-icon misaligned when text-spacing is applied
add icon css

move style to a mixin

move icon

move overrides to demo

remove import

move mixin app layout

remove flex shrink

--- a/src/dev-app/dev-app/dev-app-layout.scss
+++ b/src/dev-app/dev-app/dev-app-layout.scss
@@ -1,3 +1,5 @@
+@use '../../material/core/style/button-common';
+
 html, body {
   width: 100%;
   height: 100%;
@@ -73,3 +75,5 @@ body {
   display: flex;
   align-items: center;
 }
+
+@include button-common.button-icon-no-shrink();
